<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cero"
                android:gravity="end"
                android:layout_span="4"
                android:textSize="30sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnAC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ac" />

            <Button
                android:id="@+id/btnSigno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masmenos" />

            <Button
                android:id="@+id/btnPorcentaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per" />

            <Button
                android:id="@+id/btnDivision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/div" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9" />

            <Button
                android:id="@+id/btnMultiplicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mul" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6" />

            <Button
                android:id="@+id/btnSuma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sum" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3" />

            <Button
                android:id="@+id/btnResta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/res" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/_0" />

            <Button
                android:id="@+id/btnPunto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot" />

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eq" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>